# geoguessr-AI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
generator/: countries.txt  data.py  make_dirs.py  utils.py
train/: main.py  model.py
utils/: to_keyboard.py
