[tool.poetry]
name = "geoguessr-ai"
version = "0.1.0"
description = ""
authors = ["Nicolas Aagnes"]

[tool.poetry.dependencies]
python = "^3.7.1"
opencv-python = "^4.5.1"
mss = "^6.1.0"
Pillow = "^8.1.2"
numpy = "^1.19.2"
tensorflow = "^2.4.1"
google-streetview = "^1.2.9"
pandas = "^1.2.3"
tqdm = "^4.59.0"
python-dotenv = "^0.16.0"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
isort = "^4.3"
pre-commit = "^1.20"
pytest = "^5.2"
mypy = "^0.740.0"
flake8 = "^3.7"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["dotenv", "google_streetview", "model", "numpy", "pandas", "tensorflow", "tqdm"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
